# watchlist-fastapi

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: b403afdb69a0_init.py
static/: style.css
templates/: base.html  edit.html  index.html  login.html  settings.html
tests/: test.py
watchlist/: config.py  database.py  dependencies.py  main.py  models.py
watchlist/routers/: auth.py  movie.py
