[tool.poetry]
name = "watchlist"
version = "0.1.0"
description = ""
authors = ["ray <redstarshine@86.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.96.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
sqlalchemy = "^2.0.15"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.272"
mypy = "^1.3.0"


[[tool.poetry.source]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "default"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
