[tool.poetry]
name = "watchlist"
version = "0.1.0"
description = ""
authors = ["ray <redstarshine@86.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.96.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
sqlalchemy = "^2.0.15"
python-dotenv = "^1.0.0"
jinja2 = "^3.1.2"
python-multipart = "^0.0.6"
bcrypt = "^4.0.1"
fastapi-login = "^1.9.0"
alembic = "^1.11.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.272"
mypy = "^1.3.0"
pre-commit = "^3.3.2"
httpx = "^0.24.1"
pytest = "^7.3.2"


[tool.ruff]
target-version = "py38"
line-length = 88
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "tests"
]

[tool.mypy]
strict = false

[[tool.mypy.overrides]]
module = "watchlist.tests.*"
ignore_missing_imports = true
check_untyped_defs = true

[[tool.poetry.source]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "default"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
